feat: Add deep research demo executable and simplify agent configuration
- Add new deep-research-demo executable target in CMakeLists.txt with proper DLL copying
- Simplify config.yaml by removing extensive agent configurations and function definitions
- Change server port from 8081 to 8080 and logging level to DEBUG
- Implement get_agent_by_name() method in multi_agent_system for agent lookup by name
- Add fallback agent lookup by name in workflow executors when ID lookup fails
- Add missing function implementations (analyze_data, research_topic, etc.) as LLM functions
- Update sequential.yaml to use simplified single-agent research workflow
- Fix workflow_example.cpp to find and execute specific workflow by name
- Add format header to VS Code settings for C++ IntelliSense
- Update kolosal-server submodule to dirty state

This commit streamlines the agent system configuration while adding new demo capabilities
and improving workflow execution robustness with better agent resolution.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
         "system_error": "cpp",
         "valarray": "cpp",
         "filesystem": "cpp",
-        "expected": "cpp"
+        "expected": "cpp",
+        "format": "cpp"
     }
 }
