--- a/config.yaml
+++ b/config.yaml
@@ -1,11 +1,11 @@
 server:
-  port: 8081
+  port: 8080
   host: 127.0.0.1
   idle_timeout: 300
   allow_public_access: false
   allow_internet_access: false
 logging:
-  level: INFO
+  level: DEBUG
   file: ""
   access_log: false
   quiet_mode: false
@@ -63,494 +63,31 @@ database:
     max_connections: 10
     connection_timeout: 5
     embedding_batch_size: 5
+models:
+  - id: qwen3-0.6b-main
+    path: D:\Works\Genta\codes\kolosal-agent\models\Qwen3-0.6B-UD-Q4_K_XL.gguf
+    type: llm
+    load_immediately: false
+    main_gpu_id: 0
+    inference_engine: llama-cpu
+    load_params:
+      n_ctx: 2048
+      n_keep: 0
+      use_mmap: true
+      use_mlock: true
+      n_parallel: 1
+      cont_batching: true
+      warmup: false
+      n_gpu_layers: 0
+      n_batch: 512
+      n_ubatch: 512
 inference_engines:
   - name: llama-cpu
     library_path: D:\Works\Genta\codes\kolosal-agent\build\Debug\llama-cpu.dll
     version: 1.0.0
     description: CPU inference engine
     load_on_startup: true
-    type: "llama_cpp"
-    model_path: "d:\\Works\\Genta\\codes\\kolosal-agent\\models\\Qwen3-0.6B-UD-Q4_K_XL.gguf"
-    auto_load: true
-    context_size: 2048
-    batch_size: 512
-    threads: 4
-    gpu_layers: 0
-    settings:
-      verbose: "false"
-      mlock: "false"
 default_inference_engine: llama-cpu
-
-# Model configurations using models from the models/ directory
-models:
-  - id: qwen3-0.6b-main
-    path: models/Qwen3-0.6B-UD-Q4_K_XL.gguf
-    type: llm
-    load_immediately: false
-    inference_engine: llama-cpu
-    load_params:
-      n_ctx: 2048
-      n_gpu_layers: 0
-      n_batch: 512
-      
-  - id: qwen3-embedding
-    path: models/Qwen3-Embedding-0.6B-Q8_0.gguf
-    type: embedding
-    load_immediately: false
-    inference_engine: llama-cpu
-    load_params:
-      n_ctx: 512
-      n_gpu_layers: 0
-      n_batch: 256
-      
-  - id: minilm-embedding
-    path: models/all-MiniLM-L6-v2-bf16-q4_k.gguf
-    type: embedding
-    load_immediately: false
-    inference_engine: llama-cpu
-    load_params:
-      n_ctx: 512
-      n_gpu_layers: 0
-      n_batch: 256
-      
-  - id: downloaded-model
-    path: models/downloaded_model.gguf
-    type: llm
-    load_immediately: false
-    inference_engine: llama-cpu
-    load_params:
-      n_ctx: 2048
-      n_gpu_layers: 0
-      n_batch: 512
 features:
   health_check: true
   metrics: false
-
-# Agent System Configuration
-system:
-  worker_threads: 4
-  health_check_interval_seconds: 10
-  log_level: "info"
-
-# Agent Configurations
-agents:
-  # Basic research and analysis agent
-  - name: "research_analyst"
-    type: "research" 
-    role: "ANALYST"
-    description: "Handles research, analysis, and information synthesis tasks"
-    system_prompt: "You are a research analyst capable of analyzing data, conducting research, and synthesizing information into comprehensive reports."
-    capabilities:
-      - "data_analysis"
-      - "research_synthesis" 
-      - "report_generation"
-      - "information_processing"
-    functions:
-      - "analyze_data"
-      - "research_topic"
-      - "generate_report"
-      - "synthesize_information"
-    llm_config:
-      api_endpoint: "http://127.0.0.1:8080"
-      model_name: "qwen3-0.6b-main"
-      temperature: 0.7
-      max_tokens: 2048
-      timeout_seconds: 30
-    auto_start: true
-    max_concurrent_jobs: 3
-    heartbeat_interval_seconds: 5
-
-  # Task execution agent
-  - name: "task_executor"
-    type: "executor"
-    role: "EXECUTOR" 
-    description: "Executes specific tasks and operations using available tools"
-    system_prompt: "You are a task executor capable of performing specific operations, using tools, and completing assigned tasks efficiently."
-    capabilities:
-      - "task_execution"
-      - "tool_usage"
-      - "file_operations"
-      - "api_integration"
-    functions:
-      - "execute_task"
-      - "use_tool"
-      - "process_files"
-      - "call_api"
-    llm_config:
-      api_endpoint: "http://127.0.0.1:8080"
-      model_name: "qwen3-0.6b-main"
-      temperature: 0.5
-      max_tokens: 1024
-      timeout_seconds: 30
-    auto_start: true
-    max_concurrent_jobs: 5
-    heartbeat_interval_seconds: 5
-
-  # Research Coordinator Agent
-  - name: "research_coordinator"
-    type: "research_coordinator"
-    role: "RESEARCH_COORDINATOR" 
-    description: "Coordinates research projects and manages research workflows"
-    system_prompt: "You are a research coordinator responsible for planning and managing complex research projects. You excel at decomposing research questions, selecting methodologies, and orchestrating multi-step research processes."
-    capabilities:
-      - "research_planning"
-      - "query_decomposition" 
-      - "methodology_selection"
-      - "project_management"
-      - "workflow_orchestration"
-    functions:
-      - "research_query_planning"
-      - "methodology_selection"
-      - "project_coordination"
-    llm_config:
-      api_endpoint: "http://127.0.0.1:8080"
-      model_name: "qwen3-0.6b-main"
-      temperature: 0.3
-      max_tokens: 4096
-      timeout_seconds: 45
-    auto_start: true
-    max_concurrent_jobs: 3
-    heartbeat_interval_seconds: 10
-
-  # Research Analyst Agent  
-  - name: "advanced_research_analyst"
-    type: "research_analyst"
-    role: "RESEARCH_ANALYST"
-    description: "Analyzes research data and assesses source credibility with advanced capabilities"
-    system_prompt: "You are an advanced research analyst specializing in source evaluation, credibility assessment, and information synthesis. You can detect conflicts between sources and provide comprehensive analysis."
-    capabilities:
-      - "source_analysis"
-      - "credibility_assessment"
-      - "information_synthesis"
-      - "data_analysis"
-      - "conflict_detection"
-    functions:
-      - "source_credibility_analysis"
-      - "information_synthesis"
-      - "fact_verification"
-      - "data_analysis"
-    llm_config:
-      api_endpoint: "http://127.0.0.1:8080"
-      model_name: "qwen3-0.6b-main"
-      temperature: 0.4
-      max_tokens: 3072
-      timeout_seconds: 40
-    auto_start: true
-    max_concurrent_jobs: 4
-    heartbeat_interval_seconds: 8
-
-  # Knowledge Curator Agent
-  - name: "knowledge_curator" 
-    type: "knowledge_curator"
-    role: "KNOWLEDGE_CURATOR"
-    description: "Manages knowledge graphs and verifies factual information"
-    system_prompt: "You are a knowledge curator responsible for building and maintaining knowledge graphs, extracting entities, mapping relationships, and verifying facts across multiple sources."
-    capabilities:
-      - "knowledge_graph_management"
-      - "fact_verification"
-      - "entity_extraction"
-      - "relationship_mapping"
-      - "semantic_querying"
-    functions:
-      - "knowledge_graph_query"
-      - "fact_verification"
-      - "entity_extraction"
-      - "relationship_mapping"
-    llm_config:
-      api_endpoint: "http://127.0.0.1:8080"
-      model_name: "qwen3-0.6b-main"
-      temperature: 0.2
-      max_tokens: 2048
-      timeout_seconds: 35
-    auto_start: true
-    max_concurrent_jobs: 2
-    heartbeat_interval_seconds: 12
-
-  # Source Analyst Agent
-  - name: "source_analyst"
-    type: "source_analyst"
-    role: "SOURCE_ANALYST"
-    description: "Specializes in evaluating and validating information sources"
-    system_prompt: "You are a source analyst expert in evaluating source quality, assessing author credibility, analyzing publications, and detecting bias in research materials."
-    capabilities:
-      - "source_evaluation"
-      - "author_credibility"
-      - "publication_analysis"
-      - "bias_detection"
-      - "citation_analysis"
-    functions:
-      - "source_credibility_analysis"
-      - "bias_detection"
-      - "citation_analysis"
-    llm_config:
-      api_endpoint: "http://127.0.0.1:8080"
-      model_name: "qwen3-0.6b-main"
-      temperature: 0.3
-      max_tokens: 2560
-      timeout_seconds: 30
-    auto_start: false
-    max_concurrent_jobs: 3
-    heartbeat_interval_seconds: 10
-
-  # Synthesis Specialist Agent
-  - name: "synthesis_specialist"
-    type: "synthesis_specialist"
-    role: "SYNTHESIS_SPECIALIST"
-    description: "Synthesizes information and generates comprehensive research reports"
-    system_prompt: "You are a synthesis specialist expert in integrating information from diverse sources, generating structured research reports with proper citations, and presenting evidence clearly and convincingly."
-    capabilities:
-      - "information_integration"
-      - "research_synthesis"
-      - "report_generation"
-      - "citation_management"
-      - "evidence_presentation"
-    functions:
-      - "research_report_generation"
-      - "information_synthesis"
-      - "citation_management"
-    llm_config:
-      api_endpoint: "http://127.0.0.1:8080"
-      model_name: "qwen3-0.6b-main"
-      temperature: 0.6
-      max_tokens: 4096
-      timeout_seconds: 50
-    auto_start: false
-    max_concurrent_jobs: 2
-    heartbeat_interval_seconds: 15
-
-# Function Definitions
-functions:
-  - name: "analyze_data"
-    type: "builtin"
-    description: "Analyze structured and unstructured data"
-    parameters:
-      data_source: "string"
-      analysis_type: "string" 
-      output_format: "string"
-    async_capable: true
-    timeout_ms: 10000
-
-  - name: "research_topic"
-    type: "builtin"
-    description: "Conduct research on a given topic"
-    parameters:
-      topic: "string"
-      depth: "string"
-      sources: "array"
-    async_capable: true
-    timeout_ms: 15000
-
-  - name: "execute_task"
-    type: "builtin"
-    description: "Execute a specific task with given parameters"
-    parameters:
-      task_definition: "object"
-      priority: "integer"
-      timeout: "integer"
-    async_capable: true
-    timeout_ms: 5000
-
-  - name: "generate_report"
-    type: "builtin"
-    description: "Generate reports based on analyzed data"
-    parameters:
-      data: "object"
-      format: "string"
-      template: "string"
-    async_capable: true
-    timeout_ms: 8000
-
-  # Research-Specific Functions
-  - name: "research_query_planning"
-    type: "builtin"
-    description: "Decomposes complex research queries into manageable sub-tasks and selects appropriate methodologies"
-    parameters:
-      research_question: "string"
-      methodology: "string"
-      scope: "string"
-    async_capable: true
-    timeout_ms: 15000
-
-  - name: "methodology_selection"
-    type: "builtin"
-    description: "Selects appropriate research methodologies based on research questions and constraints"
-    parameters:
-      research_type: "string"
-      domain: "string"
-      time_constraint: "string"
-      resource_level: "integer"
-    async_capable: true
-    timeout_ms: 8000
-
-  - name: "source_credibility_analysis"
-    type: "builtin" 
-    description: "Analyzes and scores the credibility and reliability of information sources"
-    parameters:
-      source_url: "string"
-      content: "string"
-      author: "string"
-      publication: "string"
-    async_capable: true
-    timeout_ms: 12000
-
-  - name: "information_synthesis"
-    type: "builtin"
-    description: "Synthesizes information from multiple sources, identifying patterns and resolving conflicts"
-    parameters:
-      sources: "array"
-      synthesis_type: "string"
-      confidence_threshold: "float"
-    async_capable: true
-    timeout_ms: 18000
-
-  - name: "fact_verification"
-    type: "builtin"
-    description: "Cross-references facts against multiple sources and assesses claim reliability"
-    parameters:
-      claim: "string"
-      sources: "array"
-      confidence_threshold: "float"
-    async_capable: true
-    timeout_ms: 20000
-
-  - name: "knowledge_graph_query"
-    type: "builtin"
-    description: "Queries the knowledge graph for entity relationships and semantic connections"
-    parameters:
-      query: "string"
-      entity_type: "string"
-      max_results: "integer"
-    async_capable: true
-    timeout_ms: 10000
-
-  - name: "entity_extraction"
-    type: "builtin"
-    description: "Extracts named entities (people, organizations, concepts) from research content"
-    parameters:
-      content: "string"
-      entity_types: "string"
-    async_capable: true
-    timeout_ms: 8000
-
-  - name: "relationship_mapping"
-    type: "builtin"
-    description: "Maps and analyzes relationships between extracted entities"
-    parameters:
-      entities: "array"
-      context: "string"
-    async_capable: true
-    timeout_ms: 12000
-
-  - name: "research_report_generation"
-    type: "builtin"
-    description: "Generates structured research reports with proper citations and evidence presentation"
-    parameters:
-      research_data: "string"
-      report_format: "string"
-      include_citations: "boolean"
-      template_type: "string"
-    async_capable: true
-    timeout_ms: 25000
-
-  - name: "citation_management"
-    type: "builtin"
-    description: "Manages citations and bibliographic references in various academic formats"
-    parameters:
-      sources: "array"
-      citation_style: "string"
-      operation: "string"
-    async_capable: true
-    timeout_ms: 6000
-
-  # Missing functions referenced by agents
-  - name: "citation_analysis"
-    type: "builtin"
-    description: "Analyzes citations and bibliographic references for quality and relevance"
-    parameters:
-      sources: "array"
-      analysis_type: "string"
-    async_capable: true
-    timeout_ms: 8000
-
-  - name: "process_files"
-    type: "builtin"
-    description: "Process various file formats and extract content"
-    parameters:
-      file_path: "string"
-      processing_type: "string"
-      output_format: "string"
-    async_capable: true
-    timeout_ms: 10000
-
-  - name: "call_api"
-    type: "builtin"
-    description: "Make API calls to external services"
-    parameters:
-      endpoint: "string"
-      method: "string"
-      payload: "object"
-      headers: "object"
-    async_capable: true
-    timeout_ms: 15000
-
-  - name: "project_coordination"
-    type: "builtin"
-    description: "Coordinate project activities and manage resources"
-    parameters:
-      project_id: "string"
-      coordination_type: "string"
-      resources: "array"
-    async_capable: true
-    timeout_ms: 12000
-
-  - name: "data_analysis"
-    type: "builtin"
-    description: "Perform advanced data analysis and statistical operations"
-    parameters:
-      dataset: "object"
-      analysis_method: "string"
-      parameters: "object"
-    async_capable: true
-    timeout_ms: 20000
-
-  - name: "bias_detection"
-    type: "builtin"
-    description: "Detect various types of bias in data, sources, or research"
-    parameters:
-      content: "string"
-      bias_types: "array"
-      sensitivity: "float"
-    async_capable: true
-    timeout_ms: 10000
-
-  - name: "synthesize_information"
-    type: "builtin"
-    description: "Synthesize information from multiple sources with conflict resolution"
-    parameters:
-      sources: "array"
-      synthesis_method: "string"
-      conflict_resolution: "string"
-    async_capable: true
-    timeout_ms: 18000
-
-  - name: "use_tool"
-    type: "builtin"
-    description: "Use external tools and utilities for various tasks"
-    parameters:
-      tool_name: "string"
-      tool_parameters: "object"
-      execution_mode: "string"
-    async_capable: true
-    timeout_ms: 30000
-
-  - name: "knowledge_retrieval"
-    type: "builtin"
-    description: "Retrieve knowledge from various sources and databases"
-    parameters:
-      query: "string"
-      sources: "array"
-      retrieval_method: "string"
-      max_results: "integer"
-    async_capable: true
-    timeout_ms: 25000
-
