--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,8 @@
         "valarray": "cpp",
         "filesystem": "cpp",
         "expected": "cpp",
-        "format": "cpp"
+        "format": "cpp",
+        "mutex": "cpp",
+        "shared_mutex": "cpp"
     }
 }
